Revert un-related change